fix image spacing

--- a/src/components/CheckoutPage/MealCheckoutItem/MealCheckoutItem.scss
+++ b/src/components/CheckoutPage/MealCheckoutItem/MealCheckoutItem.scss
@@ -1,6 +1,6 @@
 @import "src/styles/_styles.scss";
 
-$image-dimension: 70px;
+$image-dimension: 46px;
 
 .mlckitem {
   display: grid;
@@ -10,7 +10,8 @@ $image-dimension: 70px;
   &-img {
     width: $image-dimension;
     height: $image-dimension;
-    object-fit: cover;
+    margin: 12px;
+    object-fit: contain;
     object-position: 43% 50%;
   }
 
