--- a/src/components/MealPage/Meal/Meal.scss
+++ b/src/components/MealPage/Meal/Meal.scss
@@ -26,15 +26,17 @@
   }
 
   &-img {
-    width: 100%;
+    width: calc(100% - 72px);
     height: 225px;
-    object-fit: cover;
+    margin: 12px 36px;
+    object-fit: contain;
     object-position: 45% 50%;
     border-top-left-radius: $border-radius-large;
     border-top-right-radius: $border-radius-large;
     @include desktop {
-      width: 150px;
-      height: 150px;
+      width: 100px;
+      height: 100px;
+      margin: 24px;
     }
 
     @include tiny-mobile {
